Move the temp-user banner below the sticky header

--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.89
+@version     1.0.90
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/new-vector-enhanced.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -1204,6 +1204,12 @@ background: unset
 /* reduce pinned toolbar padding */
 @media screen {
   .vector-pinned-container {padding: 0 4px;}
+}
+
+/* Move the temp-user banner below the sticky header */
+.mw-temp-user-banner {
+  z-index: 1;
+  top:85px;
 }
 
 /* top page-name and language sticky
